# PCDesign

./: .gitignore  README.md  pyproject.toml  setup.py
dev/: README.md  pcd-brief.md
pcd/: __init__.py  __main__.py  cli.py  codex_client.py  critic.py  issues.py  judge.py  orchestrator.py  project.py  prompts.py  proposer.py
pcd/agents/: __init__.py  claude.py  codex.py
pcd/roles/: __init__.py  _guard.py  critic.py  exploration.py  judge.py  prompts.py  proposer.py  reframer.py
