[project]
name = "pcdesign"
version = "0.1.0"
description = "Proposer/Critic adversarial design CLI using codex app-server."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pcd = "pcd.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pcd*"]
